# turboalias

./: README.md  README.me  developer.txt  pyproject.toml
src/turboalias/: cli.py  shell.py  sync.py
turboalias/: __init__.py  cli.py  shell.py
