[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "turboalias"
version = "0.1.0"
description = "Cross-workstation alias manager for bash and zsh"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "ddominik.mackiewicz@gmail.com"}
]
keywords = ["alias", "aliases", "bash", "zsh", "shell", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Shells",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[project.scripts]
turboalias = "turboalias.cli:main"

[project.urls]
Homepage = "https://github.com/mcdominik/turboalias"
"Bug Tracker" = "https://github.com/mcdominik/turboalias/issues"